<resources>
    <string name="app_name">MovieCatalog</string>
    <string name="judul">Title</string>
    <string name="score">Score</string>
    <string name="rilis">Rilis</string>
    <string name="overview">OverView</string>
    <string name="relis">release</string>
    <string name="kosong">no content</string>
    <string name="reting">RETING :</string>
    <string name="description">Description</string>
    <string name="favorite">Add Favorite</string>
    <string name="share">Share</string>
    <string name="home">HOME</string>
    <string name="up">UPCOMING</string>
    <string name="fav">FAVORITE</string>
    <string name="now">NOW PLAYING</string>
    <string name="title_activity_tab_layout">Movie Catalog</string>
    <string name="search_hint">Search</string>

    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to Movie Cataloge</string>
    <string name="searchIntruks">
        This is an app to view movie listings and details of the movie, you can do a movie title search in the search menu above
    </string>
    <string name="menulist">List View</string>
    <string name="menugrid">Grid View</string>
    <string name="menucard">Card View</string>
    <string name="menucari">Find</string>
    <string name="menusetting">Setting</string>
    <string name="title_activity_navigation">Cataloge Movie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Catalog Movie</string>
    <string name="nav_header_subtitle">Movie Review and Sinopsis</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navSetting">Setting</string>
    <string name="judulfilm">Title of</string>
    <string name="tidak_ditemukan">Not Found,please use other title for searching</string>

    <string name="title_activity_upcoming">Upcoming</string>
    <string name="title_activity_nowShow">Now Show</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favrite">Favrite</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="favorite_list">Favorite List</string>
    <string name="no_data">NO DATA</string>
    <string name="tanggal">Tanggal</string>
    <string name="release_today_reminder">Release Today Reminder</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="daily_reminder">Daily Reminder</string>

</resources>
