<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_now"
            android:icon="@drawable/ic_slideshow_white_24dp"
            android:title="@string/now" />
        <item
            android:id="@+id/nav_up"
            android:icon="@drawable/ic_skip_next_white_24dp"
            android:title="@string/up" />

    </group>

    <item android:title="@string/navSetting">
        <menu>

            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings_white_24dp"
                android:title="@string/navSetting" />
        </menu>
    </item>

</menu>
