<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Activity.NotifSetting">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/notification_setting"
    android:textColor="#000"
    android:textStyle="bold"
    android:textSize="20sp"
    />

    <CheckBox
        android:id="@+id/chk_release"
        android:layout_marginTop="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/release_today_reminder"
        android:onClick="NotifSettingChaked"
        android:checked="true"/>
<CheckBox
    android:id="@+id/chk_daily"
    android:checked="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/daily_reminder"
    android:onClick="NotifSettingChaked"/>
</LinearLayout>