<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_item_movie"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.hendrabratanata.moviecatalog.MainActivity"
    >

    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="80dp"
        android:layout_height="107dp"
        android:layout_margin="5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="bottom"


            android:text="@string/overview"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_relis"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/relis"
            android:textSize="14dp"
            android:layout_gravity="bottom"

            android:textStyle="bold|italic"

            />


    </LinearLayout>
</LinearLayout>