<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.hendrabratanata.moviecatalog.MainActivity"
    android:id="@+id/activity_main"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_catagory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            tools:listitem="@layout/item_list_movie"
            android:scrollbarAlwaysDrawHorizontalTrack="true">


        </android.support.v7.widget.RecyclerView>


        <ProgressBar
            android:id="@+id/progres_bar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kosong"
            android:textAlignment="center"

            android:textSize="15sp"
            android:textStyle="bold|italic"

            android:id="@+id/tv_kosong"/>
        <TextView
            android:layout_marginTop="10dp"
            android:textColor="@color/navigationBarColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textAlignment="center"

            android:textSize="20sp"
            android:textStyle="bold|italic"

            android:id="@+id/tv_Welcome"/>

        <TextView
            android:id="@+id/tv_desc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentTop="true"
            android:layout_marginTop="69dp"

            android:text="@string/searchIntruks"
            android:textAlignment="center"

            android:textColor="@color/navigationBarColor"
            android:textSize="15sp"
            android:textStyle="bold|italic" />

    </RelativeLayout>



</LinearLayout>